--- a/README.rdoc
+++ b/README.rdoc
@@ -6,9 +6,10 @@ Basic Last.fm API library for Ruby.
 
 Put the following in your Gemfile:
 
- gem :lastfm, :git => "git://github.com/ysbaddaden/ruby-lastfm.git"
+ gem 'ruby-lastfm', :require => 'lastfm',
+  :git => "git://github.com/ysbaddaden/ruby-lastfm.git"
 
-= Usage
+= Usage example
 
 It currently only supports <tt>album.search</tt> and <tt>artist.search</tt>.
 Responses are instances of Nokogiri::XML::Document.
